.antlr/qParser.java
// Generated from /Users/sbacha/q_antlr/q.g4 by ANTLR 4.8

package com..manifoldfinance.q;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class qParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, NEWLINE=15, WS=16, COMMENT=17, 
		LINE_COMMENT=18, NUMLIST=19, NUMNUM=20, NUM=21, BOOL=22, BOOLLIST=23, 
		DATELIST=24, DATE=25, MONTH=26, MONTHLIST=27, DAT=28, MON=29, TIMELIST=30, 
		TIME=31, TIM=32, DD=33, TI=34, MONOP=35, BINOP=36, ID=37, SYMBOL=38, CHAR=39, 
		CHARLIST=40, BYT=41, Digits=42, Digit=43;
	public static final int
		RULE_r = 0, RULE_stat = 1, RULE_expr = 2, RULE_multiExpr = 3, RULE_assign = 4, 
		RULE_multiAssign = 5, RULE_table = 6, RULE_function = 7, RULE_functionBody = 8, 
		RULE_multiID = 9, RULE_csvq = 10, RULE_query = 11, RULE_scmd = 12, RULE_slash = 13, 
		RULE_datatype = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"r", "stat", "expr", "multiExpr", "assign", "multiAssign", "table", "function", 
			"functionBody", "multiID", "csvq", "query", "scmd", "slash", "datatype"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'['", "']'", "'('", "')'", "'where'", "':'", "'{'", "'}'", 
			"','", "'select'", "'by'", "'from'", "'\\'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "NEWLINE", "WS", "COMMENT", "LINE_COMMENT", "NUMLIST", 
			"NUMNUM", "NUM", "BOOL", "BOOLLIST", "DATELIST", "DATE", "MONTH", "MONTHLIST", 
			"DAT", "MON", "TIMELIST", "TIME", "TIM", "DD", "TI", "MONOP", "BINOP", 
			"ID", "SYMBOL", "CHAR", "CHARLIST", "BYT", "Digits", "Digit"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "q.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public qParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(qParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(30);
				stat();
				}
				}
				setState(33); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << NEWLINE) | (1L << WS))) != 0) );
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(qParser.NEWLINE, 0); }
		public List<TerminalNode> WS() { return getTokens(qParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(qParser.WS, i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(37);
					match(T__0);
					setState(38);
					expr(0);
					}
					break;
				case NEWLINE:
					{
					setState(39);
					match(NEWLINE);
					setState(40);
					expr(0);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(46);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==WS) {
						{
						{
						setState(43);
						match(WS);
						}
						}
						setState(48);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(49);
					match(NEWLINE);
					}
					break;
				case 2:
					{
					setState(53);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==WS) {
						{
						{
						setState(50);
						match(WS);
						}
						}
						setState(55);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(56);
					match(T__0);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssContext extends ExprContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public AssContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class BinDoContext extends ExprContext {
		public ExprContext left;
		public Token operator;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode BINOP() { return getToken(qParser.BINOP, 0); }
		public BinDoContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ParensContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParensContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class NestedListContext extends ExprContext {
		public MultiExprContext contents;
		public MultiExprContext multiExpr() {
			return getRuleContext(MultiExprContext.class,0);
		}
		public NestedListContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FuncContext extends ExprContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FuncContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class MyidContext extends ExprContext {
		public TerminalNode ID() { return getToken(qParser.ID, 0); }
		public TerminalNode MONOP() { return getToken(qParser.MONOP, 0); }
		public TerminalNode BINOP() { return getToken(qParser.BINOP, 0); }
		public MyidContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ApplyContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ApplyContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class QryContext extends ExprContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public QryContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class DatatypkContext extends ExprContext {
		public DatatypeContext datatype() {
			return getRuleContext(DatatypeContext.class,0);
		}
		public DatatypkContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class SlshContext extends ExprContext {
		public SlashContext slash() {
			return getRuleContext(SlashContext.class,0);
		}
		public SlshContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class TblContext extends ExprContext {
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public TblContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ApplyBracketContext extends ExprContext {
		public ExprContext left;
		public MultiExprContext contents;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MultiExprContext multiExpr() {
			return getRuleContext(MultiExprContext.class,0);
		}
		public ApplyBracketContext(ExprContext ctx) { copyFrom(ctx); }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				_localctx = new DatatypkContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(62);
				datatype();
				}
				break;
			case 2:
				{
				_localctx = new ParensContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(63);
				match(T__3);
				setState(64);
				expr(0);
				setState(65);
				match(T__4);
				}
				break;
			case 3:
				{
				_localctx = new NestedListContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(67);
				match(T__3);
				setState(68);
				((NestedListContext)_localctx).contents = multiExpr();
				setState(69);
				match(T__4);
				}
				break;
			case 4:
				{
				_localctx = new TblContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(71);
				table();
				}
				break;
			case 5:
				{
				_localctx = new FuncContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(72);
				function();
				}
				break;
			case 6:
				{
				_localctx = new AssContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(73);
				assign();
				}
				break;
			case 7:
				{
				_localctx = new MyidContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(74);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << MONOP) | (1L << BINOP) | (1L << ID))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 8:
				{
				_localctx = new QryContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(75);
				query();
				}
				break;
			case 9:
				{
				_localctx = new SlshContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(76);
				slash();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(93);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new BinDoContext(new ExprContext(_parentctx, _parentState));
						((BinDoContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(79);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(80);
						((BinDoContext)_localctx).operator = match(BINOP);
						setState(81);
						((BinDoContext)_localctx).right = expr(9);
						}
						break;
					case 2:
						{
						_localctx = new ApplyContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(82);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(84); 
						_errHandler.sync(this);
						_alt = 1;
						do {
							switch (_alt) {
							case 1:
								{
								{
								setState(83);
								expr(0);
								}
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							setState(86); 
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
						} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
						}
						break;
					case 3:
						{
						_localctx = new ApplyBracketContext(new ExprContext(_parentctx, _parentState));
						((ApplyBracketContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(88);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(89);
						match(T__1);
						setState(90);
						((ApplyBracketContext)_localctx).contents = multiExpr();
						setState(91);
						match(T__2);
						}
						break;
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MultiExprContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MultiExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiExpr; }
	}

	public final MultiExprContext multiExpr() throws RecognitionException {
		MultiExprContext _localctx = new MultiExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_multiExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__5) | (1L << T__7) | (1L << T__10) | (1L << T__13) | (1L << NUMLIST) | (1L << NUMNUM) | (1L << BOOL) | (1L << BOOLLIST) | (1L << DATELIST) | (1L << DATE) | (1L << MONTH) | (1L << MONTHLIST) | (1L << TIMELIST) | (1L << TIME) | (1L << MONOP) | (1L << BINOP) | (1L << ID) | (1L << SYMBOL) | (1L << CHAR) | (1L << CHARLIST) | (1L << BYT))) != 0)) {
				{
				setState(98);
				expr(0);
				}
			}

			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(101);
				match(T__0);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__5) | (1L << T__7) | (1L << T__10) | (1L << T__13) | (1L << NUMLIST) | (1L << NUMNUM) | (1L << BOOL) | (1L << BOOLLIST) | (1L << DATELIST) | (1L << DATE) | (1L << MONTH) | (1L << MONTHLIST) | (1L << TIMELIST) | (1L << TIME) | (1L << MONOP) | (1L << BINOP) | (1L << ID) | (1L << SYMBOL) | (1L << CHAR) | (1L << CHARLIST) | (1L << BYT))) != 0)) {
					{
					setState(102);
					expr(0);
					}
				}

				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(qParser.ID, 0); }
		public TerminalNode MONOP() { return getToken(qParser.MONOP, 0); }
		public TerminalNode BINOP() { return getToken(qParser.BINOP, 0); }
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << MONOP) | (1L << BINOP) | (1L << ID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(111);
			match(T__6);
			setState(112);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiAssignContext extends ParserRuleContext {
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public MultiAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiAssign; }
	}

	public final MultiAssignContext multiAssign() throws RecognitionException {
		MultiAssignContext _localctx = new MultiAssignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_multiAssign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << MONOP) | (1L << BINOP) | (1L << ID))) != 0)) {
				{
				{
				setState(114);
				assign();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(120);
				match(T__0);
				setState(121);
				assign();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableContext extends ParserRuleContext {
		public MultiAssignContext keycols;
		public MultiAssignContext tcols;
		public List<MultiAssignContext> multiAssign() {
			return getRuleContexts(MultiAssignContext.class);
		}
		public MultiAssignContext multiAssign(int i) {
			return getRuleContext(MultiAssignContext.class,i);
		}
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_table);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__3);
			setState(128);
			match(T__1);
			setState(129);
			((TableContext)_localctx).keycols = multiAssign();
			setState(130);
			match(T__2);
			setState(131);
			((TableContext)_localctx).tcols = multiAssign();
			setState(132);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public MultiIDContext idlist;
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public MultiIDContext multiID() {
			return getRuleContext(MultiIDContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__7);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(135);
				match(T__1);
				setState(136);
				((FunctionContext)_localctx).idlist = multiID();
				setState(137);
				match(T__2);
				}
			}

			setState(141);
			functionBody();
			setState(142);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__5) | (1L << T__7) | (1L << T__10) | (1L << T__13) | (1L << NEWLINE) | (1L << WS) | (1L << NUMLIST) | (1L << NUMNUM) | (1L << BOOL) | (1L << BOOLLIST) | (1L << DATELIST) | (1L << DATE) | (1L << MONTH) | (1L << MONTHLIST) | (1L << TIMELIST) | (1L << TIME) | (1L << MONOP) | (1L << BINOP) | (1L << ID) | (1L << SYMBOL) | (1L << CHAR) | (1L << CHARLIST) | (1L << BYT))) != 0)) {
				{
				setState(146);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__3:
				case T__5:
				case T__7:
				case T__10:
				case T__13:
				case NUMLIST:
				case NUMNUM:
				case BOOL:
				case BOOLLIST:
				case DATELIST:
				case DATE:
				case MONTH:
				case MONTHLIST:
				case TIMELIST:
				case TIME:
				case MONOP:
				case BINOP:
				case ID:
				case SYMBOL:
				case CHAR:
				case CHARLIST:
				case BYT:
					{
					setState(144);
					expr(0);
					}
					break;
				case T__0:
				case NEWLINE:
				case WS:
					{
					setState(145);
					stat();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
